# ai-customer-service

./: .editorconfig  .gitattributes  .gitignore  AIKeFu.pro  CMakeLists.txt  LICENSE  README.md  main.cpp  resource.qrc
.codex_tmp/: app_data_minimal_test.db-journal  sqlite_probe.db-journal
.codex_tmp/sqlite_probe/: probe.db-journal
.github/workflows/: ci.yml
database/: app.db  app_data_schema.sql
database/codex-sqlite-check/: probe.db-journal
docs/: RPA-DB-协议.md  千牛RPA技术实现方案.md  各平台消息链路.md  微信RPA-只读(WindowsOCR+手工坐标).md  微信RPA实现方案.md  打包与启动策略.md  技术选型.md  软件参考UI图.md  需求分析与技术方案.md
docs/docs-new/design/: C++客户端与Python服务端解耦架构方案.md  C++客户端与Python服务端解耦重构规划.md  C++客户端旧链路盘点与解耦差距.md  Python服务端多平台扩展架构方案.md  python目录重构方案.md  仓库重构分析与优化方案.md  千牛单消息入库与客户端缓存链路.md  千牛平台监听发送链路与耗时分析.md  客户端缓存库与服务事实库.md  工程骨架与模块边界.md  平台接入PoC方案.md  微信RPA第一阶段落地记录.md  微信RPA重构与聚合接入方案.md  微信单消息入库与客户端缓存链路.md  微信同步当前会话历史消息方案.md  微信多媒体消息获取方案.md  微信平台启动发送与消息存储演进方案.md  统一数据模型与状态机.md  聚合界面多媒体出站发送方案.md  默认同机服务主库模式落地记录.md
docs/docs-new/direction/: 产品形态.md  各平台自动化路线.md  外部工具辅助平台接入方案.md  多平台会话聚合_架构分析文档.md  桌面客服工作台系统_架构分析文档.md
docs/docs-new/execution/: 开发任务拆分与里程碑.md  开发进度记录.md  测试验收清单.md
docs/docs-new/navigation/: README.md  开发前文档规划建议.md
docs/docs-new/scope/: MVP范围说明.md  用户场景与核心流程.md
docs/docs-old/: AI助手集成方案设计与实现.md  AI自动回复方案设计与实现.md  AI辅助回复方案设计与实现.md  RPA-DB-协议.md  UI设计规范.md  一键聚合方案.md  千牛RPA优化方案设计与实现.md  千牛RPA实现方案.md  千牛RPA改造方案设计与实现.md  各平台消息链路.md  开发流程.md  开发路线.md  影刀RPA与项目的关联.md  微信RPA优化方案设计.md  微信RPA实现方案.md  微信RPA改造方案设计与实现.md  微信RPA融合评估与落地建议.md  微信RPA链路耗时分析与优化方向.md  微信独立工作台方案设计与实现.md  打包与启动策略.md  技术选型.md  拼多多RPA实现方案.md  桌宠功能-讨论纪要.md  知识库方案设计与实现.md  软件功能清单.md  需求分析与技术方案.md  项目任务排期-四周路线图-2026-03-24.md  默认主题UI视觉规范.md
python/rpa/: calibrate_conversation_list.py  calibrate_input.py  calibrate_qianniu_conversation_list.py  db_inspect.py  main.py  preview_qianniu_unread_band.py  preview_wechat_region_ocr.py  preview_wechat_unread_band.py  requirements.txt  run_all.bat  run_wechat.bat  wechat_config.json  wechat_reader_ocr.py  writer.py
python/rpa/common/: __init__.py  db_helper.py  header_ocr_preprocess.py  incremental.py  input_sim.py  layout_parser.py  ocr_engine.py  qianniu_bubble_parser.py  qianniu_chat_parser.py  qianniu_clicknium.py  qianniu_coords.py  qianniu_header.py  qianniu_session.py  qianniu_window.py  rpa_console_log.py  screenshot.py  unread_detector.py  wechat_capture.py  wechat_ocr_ops.py  wechat_session.py  wechat_uia.py  win32_window.py  window_lock.py
python/rpa/config/: pdd_config.json  qianniu_config.json  wechat_config.json
python/rpa/core/: __init__.py  incremental.py  layout_parser.py  name_stabilizer.py  ocr_engine.py  rpa_console_log.py  win32_window.py
python/rpa/db/: __init__.py  connection.py  inbox_dao.py
python/rpa/readers/: __init__.py  (+6 more)
python/service/: README.md  __init__.py  ai_suggestion.py  analyze_qianniu_timing.py  app_database.py  cache_snapshot.py  migrate_legacy_databases.py  rpa_bridge.py  run_service.bat  server.py  truth_store.py
resources/: app_resources.qrc  windows_app_icon.rc
src/: main.cpp
src/controllers/: MainController.cpp  MainController.h
src/core/: authmanager.cpp  authmanager.h  conversationmanager.cpp  conversationmanager.h  messagerouter.cpp  messagerouter.h  platformbootstrap.cpp  platformbootstrap.h  types.cpp  types.h
src/data/: aiassistantdao.cpp  aiassistantdao.h  airequesteventdao.cpp  airequesteventdao.h  appdatauistatedao.cpp  appdatauistatedao.h  conversationdao.cpp  conversationdao.h  customerprofiledao.cpp  customerprofiledao.h  database.cpp  database.h  messagedao.cpp  messagedao.h  messagesendeventdao.cpp  messagesendeventdao.h  qianniuconversationdao.cpp  qianniuconversationdao.h  userdao.cpp  userdao.h  wechatmessagedao.cpp  wechatmessagedao.h
src/ipc/: ipcservice.cpp  ipcservice.h  ipctypes.cpp  ipctypes.h
src/models/: PlatformModel.cpp  PlatformModel.h  unifiedmodels.cpp  unifiedmodels.h
src/ui/: addwindowdialog.cpp  addwindowdialog.h  aggregatechatform.cpp  aggregatechatform.h  aicustomerservicebackendwindow.cpp  aicustomerservicebackendwindow.h  aiproviderconfigpage.cpp  aiproviderconfigpage.h  conversationlistmodel.cpp  conversationlistmodel.h  editprofiledialog.cpp  editprofiledialog.h  foldarrowcombobox.h  helpcenterdialog.cpp  helpcenterdialog.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h  messagelistmodel.cpp  messagelistmodel.h  pythonserviceconnectiondialog.cpp  pythonserviceconnectiondialog.h  robotassistantwidget.cpp  robotassistantwidget.h  rpa_console_window.cpp  rpa_console_window.h  rpamanagedialog.cpp  rpamanagedialog.h  rpaprocesscontroller.cpp  rpaprocesscontroller.h  sidebartocdelegate.cpp  sidebartocdelegate.h  wechatworkbenchdialog.cpp  wechatworkbenchdialog.h
src/utils/: ApplyStyle.cpp  ApplyStyle.h  appsettings.h  cryptoutil.cpp  cryptoutil.h  imagedataurl.cpp  imagedataurl.h  logger.cpp  logger.h  runtimemode.h  scrollbehavior.cpp  scrollbehavior.h  svgresourcepixmap.cpp  svgresourcepixmap.h  swordcursor.cpp  swordcursor.h  win32windowhelper.cpp  win32windowhelper.h
src/views/: AddWindowDialogView.cpp  AddWindowDialogView.h  GroupReceptionDialog.cpp  GroupReceptionDialog.h  MainWindowView.cpp  MainWindowView.h  RobotManageDialog.cpp  RobotManageDialog.h  SettingDialog.cpp  SettingDialog.h
tests/: CMakeLists.txt  test_aiabstractions.cpp  test_authmanager.cpp  test_cache_snapshot.py  test_cryptoutil.cpp  test_data_access.cpp  test_message_router.cpp  test_migrate_legacy_databases.py  test_openaicompatclient.cpp  test_qianniu_bubble_parser.py  test_qianniu_chat_parser.py  test_qianniu_incoming_tb_sanitize.py  test_qianniu_list_header_reconcile.py  test_qianniu_reader.py  test_qianniu_sidecar_adapter.py  test_qianniu_unread_dual_band.py  test_rpa_bridge_platform_routing.py  test_service_server_platform_routes.py  test_service_truth_store.py  test_wechat_layout_parser.py  test_wechat_role_and_send.py  test_wechat_session_v2.py  test_wechat_sidecar_adapter.py  test_wechat_uia_scoring.py
tests/testsupport/: testdatabase.h
utils/: ApplyStyle.cpp  ApplyStyle.h
(+42 files in other folders)
